[gd_scene load_steps=20 format=2]

[ext_resource path="res://content/shared/explosions/Explosion.gd" type="Script" id=1]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/weapons/obelisk/img/stunWave.png" type="Texture" id=3]
[ext_resource path="res://content/sounds/Events/Meteor/Meteor_03.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/Events/Meteor/Meteor_01.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/Events/Meteor/Meteor_02.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 128.016

[node name="Explosion96" type="Node2D"]
script = ExtResource( 1 )
damage = 0.0

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 200
frames = SubResource( 13 )

[node name="Sound" parent="." instance=ExtResource( 2 )]
pitch_scale = 0.89
bus = "World"
randomPitch = 0.2
streams = [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 14 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="finished" from="Sound" to="." method="_on_Sound_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
